# SCOPE-Tutorial-1

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  william2.txt
1-BeagleBone/: Dockerfile  README.md  build-BBB.sh  clean.sh
1-BeagleBone/src/: LED_Blink_Test.cpp  LED_Driver.cpp
1-BeagleBone/toolchains/: BeagleBoneBlack.cmake
2-Fprime/: Dockerfile  README.md  docker-compose.yml
include/: LED_Driver.hpp
newfolder/: testerfile
src/: LED_Blink_Test.cpp  LED_Driver.cpp
testfolder/: testfile
